--- a/stream_to_database.ipynb
+++ b/stream_to_database.ipynb
@@ -309,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +323,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "123d79161df855f0c489f847a75eff950cf4215d72064c0fd012450ef3258447"
+   }
   }
  },
  "nbformat": 4,
